--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>452</width>
+    <height>517</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Serial Writer</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QScrollBar" name="dataScrool">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>170</y>
+      <x>20</x>
+      <y>370</y>
       <width>371</width>
       <height>20</height>
      </rect>
@@ -33,17 +33,17 @@
    <widget class="QLCDNumber" name="lcdNumber">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>130</y>
-      <width>151</width>
-      <height>23</height>
+      <x>20</x>
+      <y>302</y>
+      <width>181</width>
+      <height>61</height>
      </rect>
     </property>
    </widget>
    <widget class="QComboBox" name="comboBox">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>200</x>
       <y>20</y>
       <width>151</width>
       <height>21</height>
@@ -53,8 +53,8 @@
    <widget class="QComboBox" name="baudRateComboBox">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>50</y>
+      <x>200</x>
+      <y>70</y>
       <width>151</width>
       <height>21</height>
      </rect>
@@ -103,8 +103,8 @@
    <widget class="QComboBox" name="dataBitsComboBox">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>80</y>
+      <x>200</x>
+      <y>120</y>
       <width>151</width>
       <height>21</height>
      </rect>
@@ -133,8 +133,8 @@
    <widget class="QComboBox" name="parityComboBox">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>50</y>
+      <x>200</x>
+      <y>170</y>
       <width>151</width>
       <height>21</height>
      </rect>
@@ -168,8 +168,8 @@
    <widget class="QComboBox" name="stopBitsComboBox">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>80</y>
+      <x>200</x>
+      <y>220</y>
       <width>151</width>
       <height>21</height>
      </rect>
@@ -188,8 +188,8 @@
    <widget class="QComboBox" name="flowControlComboBox">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>20</y>
+      <x>200</x>
+      <y>270</y>
       <width>151</width>
       <height>20</height>
      </rect>
@@ -210,13 +210,104 @@
      </property>
     </item>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>10</y>
+      <width>159</width>
+      <height>38</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Serial Port Device:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>60</y>
+      <width>159</width>
+      <height>38</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>BaudRate:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>110</y>
+      <width>159</width>
+      <height>38</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Data bits:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>160</y>
+      <width>159</width>
+      <height>38</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Parity:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>210</y>
+      <width>159</width>
+      <height>38</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Stop bits:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>260</y>
+      <width>159</width>
+      <height>38</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Flow Control:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="statusLabel">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>307</y>
+      <width>181</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Status</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
+     <width>452</width>
      <height>43</height>
     </rect>
    </property>
